--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                    <button class="btn-action-light" onclick="addChord('Am')">Am</button>
                    <button class="btn-action-light" onclick="addChord('A7')">A7</button>
                    <button class="btn-action-light" onclick="addChord('Am7')">Am7</button>
+                   <button class="btn-action-light" onclick="addChord('A7sus4')">A7sus4</button>
                    <br/>
                    <button class="btn-action-light" onclick="addChord('A#')">A#</button>
                    <button class="btn-action-light" onclick="addChord('A#m')">A#m</button>
