--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                    <button class="btn-action-light" onclick="addChord('C7')">C7</button>
                    <button class="btn-action-light" onclick="addChord('Cm7')">Cm7</button>
                    <br/>
-                   <button class="btn-action-light" onclick="addChord('C#')">C#</button>
-                   <button class="btn-action-light" onclick="addChord('C#m')">C#m</button>
+                   <button class="btn-action-light" onclick="addChord('Csharp')">C#</button>
+                   <button class="btn-action-light" onclick="addChord('Csharpm')">C#m</button>
                    <br/>
                    <button class="btn-action-light" onclick="addChord('D')">D</button>
                    <button class="btn-action-light" onclick="addChord('Dm')">Dm</button>
